--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./utils/vars.scss";
+@import "./utils/reset.scss";
+@import "./utils/mixins.scss";
+@import "./utils/fonts.scss";
+@import "./blocks/archive-button.scss";
+@import "./blocks/button.scss";
+@import "./blocks/navigation.scss";
+@import "./blocks/heading.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/header-menu.scss";
+@import "./blocks/actual.scss";
+@import "./blocks/upcoming.scss";
+@import "./blocks/visit.scss";
+@import "./blocks/news.scss";
+@import "./blocks/follow.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/burger-menu.scss";
